rust/cube/cubeplanner/tests/snapshots/planning__ungrouped_query.snap
---
source: cubeplanner/tests/planning.rs
expression: planned.sql
---
SELECT "orders".status "orders__status", "users".city "users__city" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
LEFT JOIN  public.users  AS "users" ON "orders".user_id = "users".id
ORDER BY  1  ASC
LIMIT 5
